--- a/package.json
+++ b/package.json
@@ -5,23 +5,31 @@
   "main": "index.js",
   "scripts": {
     "start:dev": "tsx watch src/app.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "-": "^0.0.1",
+    "@types/jest": "^29.5.12",
+    "@types/supertest": "^6.0.2",
     "bcrypt": "^5.1.1",
     "config": "^3.3.12",
     "cors": "^2.8.5",
+    "D": "^1.0.0",
     "dayjs": "^1.11.11",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongoose": "^8.5.1",
     "nanoid": "^5.0.7",
     "pino": "^9.3.1",
     "pino-pretty": "^11.2.1",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
